v0.2/dev/ros2_uav_px4/_sources/generated/program_listing_file_include_ros2_uav_px4_utils_uav_cpp_ros2_conversions.hpp.rst.txt

.. _program_listing_file_include_ros2_uav_px4_utils_uav_cpp_ros2_conversions.hpp:

Program Listing for File uav_cpp_ros2_conversions.hpp
=====================================================

|exhale_lsh| :ref:`Return to documentation for file <file_include_ros2_uav_px4_utils_uav_cpp_ros2_conversions.hpp>` (``include/ros2_uav_px4/utils/uav_cpp_ros2_conversions.hpp``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS

.. code-block:: cpp

   // Copyright 2024 Damien SIX (damien@robotsix.net)
   //
   // Licensed under the Apache License, Version 2.0 (the "License");
   // you may not use this file except in compliance with the License.
   // You may obtain a copy of the License at
   //
   //     http://www.apache.org/licenses/LICENSE-2.0
   //
   // Unless required by applicable law or agreed to in writing, software
   // distributed under the License is distributed on an "AS IS" BASIS,
   // WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   // See the License for the specific language governing permissions and
   // limitations under the License.
   
   #pragma once
   
   #include <uav_cpp/types/setpoints.hpp>
   #include <ros2_uav_interfaces/msg/pose_heading.hpp>
   
   namespace uav_ros2::utils
   {
   uav_cpp::types::PoseHeading convertToSetpoint(const ros2_uav_interfaces::msg::PoseHeading & msg)
   {
     uav_cpp::types::PoseHeading setpoint;
     setpoint.frame_id = msg.header.frame_id;
     setpoint.position = tf2::Vector3(msg.position.x, msg.position.y, msg.position.z);
     setpoint.velocity = tf2::Vector3(msg.velocity.x, msg.velocity.y, msg.velocity.z);
     setpoint.heading = msg.heading;
     return setpoint;
   }
   }  // namespace uav_ros2::utils
